--- a/www/apps/book/app/learn/debugging-and-testing/testing-tools/integration-tests/workflows/page.mdx
+++ b/www/apps/book/app/learn/debugging-and-testing/testing-tools/integration-tests/workflows/page.mdx
@@ -126,7 +126,7 @@ medusaIntegrationTestRunner({
       it("returns message", async () => {
         const { errors } = await helloWorldWorkflow(getContainer())
           .run({
-            throwOnError: false
+            throwOnError: false,
           })
 
         expect(errors.length).toBeGreaterThan(0)
