--- a/www/apps/resources/app/plugins/guides/wishlist/page.mdx
+++ b/www/apps/resources/app/plugins/guides/wishlist/page.mdx
@@ -624,6 +624,9 @@ export const createWishlistStep = createStep(
     return new StepResponse(wishlist, wishlist.id)
   },
   async (id, { container }) => {
+    if (!id) {
+      return
+    }
     const wishlistModuleService: WishlistModuleService = 
       container.resolve(WISHLIST_MODULE)
 
@@ -1108,6 +1111,9 @@ export const createWishlistItemStep = createStep(
     return new StepResponse(item, item.id)
   },
   async (id, { container }) => {
+    if (!id) {
+      return
+    }
     const wishlistModuleService: WishlistModuleService = 
       container.resolve(WISHLIST_MODULE)
 
