--- a/www/apps/book/app/learn/fundamentals/workflows/store-executions/page.mdx
+++ b/www/apps/book/app/learn/fundamentals/workflows/store-executions/page.mdx
@@ -50,7 +50,7 @@ import { createStep, createWorkflow } from "@medusajs/framework/workflows-sdk"
 
 const step1 = createStep(
   {
-    name: "step-1"
+    name: "step-1",
   },
   async () => {
     console.log("Hello from step 1")
@@ -61,7 +61,7 @@ export const helloWorkflow = createWorkflow(
   {
     name: "hello-workflow",
     retentionTime: 99999,
-    store: true
+    store: true,
   },
   () => {
     step1()
@@ -98,8 +98,8 @@ export const retrieveHighlights = [
 ]
 
 ```ts title="src/workflows/[id]/route.ts" highlights={retrieveHighlights}
-import { MedusaRequest, MedusaResponse } from "@medusajs/framework";
-import { Modules } from "@medusajs/framework/utils";
+import { MedusaRequest, MedusaResponse } from "@medusajs/framework"
+import { Modules } from "@medusajs/framework/utils"
 
 export async function GET(
   req: MedusaRequest,
@@ -112,11 +112,11 @@ export async function GET(
   )
 
   const [workflowExecution] = await workflowEngineService.listWorkflowExecutions({
-    transaction_id: transaction_id
+    transaction_id: transaction_id,
   })
 
   res.json({
-    workflowExecution
+    workflowExecution,
   })
 }
 ```
@@ -165,7 +165,7 @@ To check if a stored workflow execution failed, you can check its `state` proper
 ```ts
 if (workflowExecution.state === "failed") {
   return res.status(500).json({
-    error: "Workflow failed"
+    error: "Workflow failed",
   })
 }
 ```
