--- a/www/apps/resources/app/recipes/commerce-automation/restock-notification/page.mdx
+++ b/www/apps/resources/app/recipes/commerce-automation/restock-notification/page.mdx
@@ -524,6 +524,9 @@ Since the `createRestockSubscriptionStep` creates a restock subscription, you'll
 export const createOrGetRestockSubscriptionsStep = createStep(
   // ...
   async (restockSubscription, { container }) => {
+    if (!restockSubscription) {
+      return
+    }
     const restockModuleService: RestockModuleService = container.resolve(
       RESTOCK_MODULE
     )
@@ -576,6 +579,9 @@ export const updateRestockSubscriptionStep = createStep(
     return new StepResponse(restockSubscription, oldData)
   },
   async (restockSubscription, { container }) => {
+    if (!restockSubscription) {
+      return
+    }
     const restockModuleService: RestockModuleService = container.resolve(
       RESTOCK_MODULE
     )
