--- a/www/apps/resources/app/recipes/subscriptions/examples/standard/page.mdx
+++ b/www/apps/resources/app/recipes/subscriptions/examples/standard/page.mdx
@@ -1705,7 +1705,7 @@ class SubscriptionModuleService extends MedusaService({
   Subscription,
 }) {
   // ...
-  async recordNewSubscriptionOrder(id: string): Promise<SubscriptionData[]> {
+  async recordNewSubscriptionOrder(id: string) {
     const subscription = await this.retrieveSubscription(id)
 
     const orderDate = new Date()
