add screenshot in summary

--- a/www/apps/resources/app/storefront-development/guides/express-checkout/page.mdx
+++ b/www/apps/resources/app/storefront-development/guides/express-checkout/page.mdx
@@ -9,6 +9,7 @@ tags:
   - order
   - region
   - checkout
+  - example
 ---
 
 import { Card, Prerequisites, Details } from "docs-ui"
@@ -48,10 +49,14 @@ When you install a Medusa application, you get a fully-fledged commerce server a
 
 An express checkout storefront is a streamlined shopping experience that focuses on reducing friction during the checkout process, allowing customers to quickly and easily buy products with minimal input. When you have an express checkout storefront, you share a link to purchase one of your products, either through social media, blog posts, or other promotional campaigns, and the customer can complete the purchase with minimal effort.
 
+### Summary
+
 In this guide, you'll learn how to:
 
 - Install and set up Medusa.
 - Create a custom express checkout storefront with Next.js.
+
+![Screenshot of the express checkout storefront](https://res.cloudinary.com/dza7lstvk/image/upload/v1739344861/Medusa%20Resources/Screenshot_2025-02-12_at_9.20.09_AM_ufqdi3.png)
 
 You can follow this guide whether you're new to Medusa or an advanced Medusa developer.
 
