docs: update tips in user guide

--- a/www/apps/user-guide/app/tips/bulk-editor/page.mdx
+++ b/www/apps/user-guide/app/tips/bulk-editor/page.mdx
@@ -10,7 +10,7 @@ export const metadata = {
 
 # {metadata.title}
 
-In this document, you'll learn about different tips and shortcuts to using the bulk editor.
+In this guide, you'll learn about different tips and shortcuts to using the bulk editor.
 
 ![Bulk Editor Example](https://res.cloudinary.com/dza7lstvk/image/upload/v1739535694/User%20Guide/Screenshot_2025-02-14_at_2.20.10_PM_wjsfcg.png)
 
